--- a/index.html
+++ b/index.html
@@ -2,31 +2,32 @@
 <html>
 <head>
 	<title>Blognya Rini</title>
+  <link rel="stylesheet" type="text/css" href="labkom.css">
 </head>
-<h1 style="color:#000066">Biodata dan Pengalaman</h1>
-<p>Halo semuanya...</p>
-<p>Sebelum aku menceritakan sebuah pengalaman. Kita kenalan dulu yuk!</p>
-<img src="foto biodata.jpg"width="200"></center>
-<p><table border="1" width="100%">
-   <tr>
-    <th>Nama Lengkap</th>
-    <th>Nama Panggilan</th>
-    <th>Tempat, Tanggal Lahir</th>
-    <th>Hobi</th>
-   </tr>
-   <tr>
-    <td>Rini Sinta Puspitasari</td>
-    <td>Rini</td>
-    <td>Depok, 05 Mei 2004</td>
-    <td>Mendengarkan musik & membaca cerita fiksi</td>
-   </tr>
- </table></p>
- <p>Sesuai dengan kalimat aku sebelumnya, sekarang aku mau menceritakan sebuah pengalaman. Dimana pengalaman itu adalah pengalaman aku saat melakukan Pembelajaran Jarak Jauh (PJJ) selama Pandemi Covid-19. </p>
- <p>Seperti yang kalian tahu, selama Pandemi Covid-19 ini semua sekolah diharuskan untuk melakukan Pembelajaran Jarak Jauh (PJJ) atau mungkin lebih dikenal dengan Sekolah Online. Interaksi tatap muka yang dilakukan selama PJJ ini menggunakan aplikasi online, seperti Zoom, Google Meet, dan lain-lain. Dan penyampaian materinya ada yang menggunakan Google Classroom, ada juga yang menggunakan web yang disediakan langsung dari sekolahnya. Selama PJJ ini, murid dan guru dipaksa untuk mengerti sebuah teknologi yang mungkin sebelumnya jarang sekali digunakan. Banyak murid yang mengeluh akan sistem PJJ ini, murid merasa sekolah online ini tidak efektif, tidak ada pelajaran yang masuk ke otak, bahkan ada juga yang stress. Tetapi bukan hanya murid yang mengalami kesulitan dalam sistem PJJ ini, guru juga demikian.</p>
- <p>Sama seperti kalian, aku juga merasakan hal yang sama. Pernah berada di titik 'kok capek banget ya' 'tugasnya kenapa nambah mulu sih, belum juga kelar satu, nambah lagi yang lain'. Weekend yang seharusnya diisi dengan liburan santai, malah diisi untuk mengerjakan banyak tugas. Tenang saja kalian tidak sendirian kok. Semuanya mengalami hal yang sama. Kita sama-sama belajar dari sistem PJJ ini. Semakin kesini, coba deh untuk lebih mengerti lagi pada suatu keadaaan, untuk lebih dewasa lagi dalam menghadapi suatu masalah, karena tidak selamanya di dunia ini memutarkan hal-hal yang manis saja. Layaknya sebuah film, tidak akan seru kalau tidak ada konfliknya dan juga pasti ada sebuah hikmah yang bisa kita ambil dari suatu kejadian. Coba deh setiap ada tugas atau apapun itu, jangan langsung mengeluh, semua hanya perlu dijalani dengan rasa syukur. Bersyukur masih bisa hidup, bersyukur masih diberi kesehatan, bersyukur masih bisa sekolah, bersyukur masih bisa mendapatkan suatu pelajaran yang mungkin tidak semua orang bisa dapatkan. Yuk sama-sama berusaha untuk menjadi lebih dewasa lagi dan selalu bersyukur sekecil apapun yang kamu dapatkan itu.</p>
- <p>Mungkin segitu aja dulu cerita pengalaman dari aku. Ambil baiknya, buang buruknya. Jangan lupa untuk selalu pantengin blog aku untuk update pengalaman lainnya. Sampai jumpa lagi. Dadah..</p>
-</table>
 <body>
-
+  <div class="box">
+    <h1 class="box-h1" style="color:white">Biodata dan Pengalaman</h1>
+    <p>Halo semuanya...</p>
+    <p>Sebelum aku menceritakan sebuah pengalaman. Kita kenalan dulu yuk!</p>
+    <img src="foto biodata.jpg"class="box-img"width="200">
+    <p><table border="1" width="100%">
+      <tr>
+        <th>Nama Lengkap</th>
+        <th>Nama Panggilan</th>
+        <th>Tempat, Tanggal Lahir</th>
+        <th>Hobi</th>
+      </tr>
+      <tr>
+        <td>Rini Sinta Puspitasari</td>
+        <td>Rini</td>
+        <td>Depok, 05 Mei 2004</td>
+        <td>Mendengarkan musik & membaca cerita fiksi</td>
+      </tr>
+    </table></p>
+    <p>Sesuai dengan kalimat aku sebelumnya, sekarang aku mau menceritakan sebuah pengalaman. Dimana pengalaman itu adalah pengalaman aku saat melakukan Pembelajaran Jarak Jauh (PJJ) selama Pandemi Covid-19. </p>
+    <p>Seperti yang kalian tahu, selama Pandemi Covid-19 ini semua sekolah diharuskan untuk melakukan Pembelajaran Jarak Jauh (PJJ) atau mungkin lebih dikenal dengan Sekolah Online. Interaksi tatap muka yang dilakukan selama PJJ ini menggunakan aplikasi online, seperti Zoom, Google Meet, dan lain-lain. Dan penyampaian materinya ada yang menggunakan Google Classroom, ada juga yang menggunakan web yang disediakan langsung dari sekolahnya. Selama PJJ ini, murid dan guru dipaksa untuk mengerti sebuah teknologi yang mungkin sebelumnya jarang sekali digunakan. Banyak murid yang mengeluh akan sistem PJJ ini, murid merasa sekolah online ini tidak efektif, tidak ada pelajaran yang masuk ke otak, bahkan ada juga yang stress. Tetapi bukan hanya murid yang mengalami kesulitan dalam sistem PJJ ini, guru juga demikian.</p>
+    <p>Sama seperti kalian, aku juga merasakan hal yang sama. Pernah berada di titik 'kok capek banget ya' 'tugasnya kenapa nambah mulu sih, belum juga kelar satu, nambah lagi yang lain'. Weekend yang seharusnya diisi dengan liburan santai, malah diisi untuk mengerjakan banyak tugas. Tenang saja kalian tidak sendirian kok. Semuanya mengalami hal yang sama. Kita sama-sama belajar dari sistem PJJ ini. Semakin kesini, coba deh untuk lebih mengerti lagi pada suatu keadaaan, untuk lebih dewasa lagi dalam menghadapi suatu masalah, karena tidak selamanya di dunia ini memutarkan hal-hal yang manis saja. Layaknya sebuah film, tidak akan seru kalau tidak ada konfliknya dan juga pasti ada sebuah hikmah yang bisa kita ambil dari suatu kejadian. Coba deh setiap ada tugas atau apapun itu, jangan langsung mengeluh, semua hanya perlu dijalani dengan rasa syukur. Bersyukur masih bisa hidup, bersyukur masih diberi kesehatan, bersyukur masih bisa sekolah, bersyukur masih bisa mendapatkan suatu pelajaran yang mungkin tidak semua orang bisa dapatkan. Yuk sama-sama berusaha untuk menjadi lebih dewasa lagi dan selalu bersyukur sekecil apapun yang kamu dapatkan itu.</p>
+    <p>Mungkin segitu aja dulu cerita pengalaman dari aku. Ambil baiknya, buang buruknya. Jangan lupa untuk selalu pantengin blog aku untuk update pengalaman lainnya. Sampai jumpa lagi. Dadah..</p>
+</div>
 </body>
 </html>
