--- a/index.html
+++ b/index.html
@@ -1,33 +1,144 @@
-<!DOCTYPE html>
-<html>
-<head>
-	<title>Blognya Rini</title>
-  <link rel="stylesheet" type="text/css" href="labkom.css">
-</head>
-<body>
-  <div class="box">
-    <h1 class="box-h1" style="color:white">Biodata dan Pengalaman</h1>
-    <p>Halo semuanya...</p>
-    <p>Sebelum aku menceritakan sebuah pengalaman. Kita kenalan dulu yuk!</p>
-    <img src="foto biodata.jpg"class="box-img"width="200">
-    <p><table border="1" width="100%">
-      <tr>
-        <th>Nama Lengkap</th>
-        <th>Nama Panggilan</th>
-        <th>Tempat, Tanggal Lahir</th>
-        <th>Hobi</th>
-      </tr>
-      <tr>
-        <td>Rini Sinta Puspitasari</td>
-        <td>Rini</td>
-        <td>Depok, 05 Mei 2004</td>
-        <td>Mendengarkan musik & membaca cerita fiksi</td>
-      </tr>
-    </table></p>
-    <p>Sesuai dengan kalimat aku sebelumnya, sekarang aku mau menceritakan sebuah pengalaman. Dimana pengalaman itu adalah pengalaman aku saat melakukan Pembelajaran Jarak Jauh (PJJ) selama Pandemi Covid-19. </p>
-    <p>Seperti yang kalian tahu, selama Pandemi Covid-19 ini semua sekolah diharuskan untuk melakukan Pembelajaran Jarak Jauh (PJJ) atau mungkin lebih dikenal dengan Sekolah Online. Interaksi tatap muka yang dilakukan selama PJJ ini menggunakan aplikasi online, seperti Zoom, Google Meet, dan lain-lain. Dan penyampaian materinya ada yang menggunakan Google Classroom, ada juga yang menggunakan web yang disediakan langsung dari sekolahnya. Selama PJJ ini, murid dan guru dipaksa untuk mengerti sebuah teknologi yang mungkin sebelumnya jarang sekali digunakan. Banyak murid yang mengeluh akan sistem PJJ ini, murid merasa sekolah online ini tidak efektif, tidak ada pelajaran yang masuk ke otak, bahkan ada juga yang stress. Tetapi bukan hanya murid yang mengalami kesulitan dalam sistem PJJ ini, guru juga demikian.</p>
-    <p>Sama seperti kalian, aku juga merasakan hal yang sama. Pernah berada di titik 'kok capek banget ya' 'tugasnya kenapa nambah mulu sih, belum juga kelar satu, nambah lagi yang lain'. Weekend yang seharusnya diisi dengan liburan santai, malah diisi untuk mengerjakan banyak tugas. Tenang saja kalian tidak sendirian kok. Semuanya mengalami hal yang sama. Kita sama-sama belajar dari sistem PJJ ini. Semakin kesini, coba deh untuk lebih mengerti lagi pada suatu keadaaan, untuk lebih dewasa lagi dalam menghadapi suatu masalah, karena tidak selamanya di dunia ini memutarkan hal-hal yang manis saja. Layaknya sebuah film, tidak akan seru kalau tidak ada konfliknya dan juga pasti ada sebuah hikmah yang bisa kita ambil dari suatu kejadian. Coba deh setiap ada tugas atau apapun itu, jangan langsung mengeluh, semua hanya perlu dijalani dengan rasa syukur. Bersyukur masih bisa hidup, bersyukur masih diberi kesehatan, bersyukur masih bisa sekolah, bersyukur masih bisa mendapatkan suatu pelajaran yang mungkin tidak semua orang bisa dapatkan. Yuk sama-sama berusaha untuk menjadi lebih dewasa lagi dan selalu bersyukur sekecil apapun yang kamu dapatkan itu.</p>
-    <p>Mungkin segitu aja dulu cerita pengalaman dari aku. Ambil baiknya, buang buruknya. Jangan lupa untuk selalu pantengin blog aku untuk update pengalaman lainnya. Sampai jumpa lagi. Dadah..</p>
-</div>
-</body>
+<!doctype html>
+<html lang="en">
+  <head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
+
+    <!-- My CSS -->
+    <link rel="stylesheet" href="labkom.css">
+
+    <title>Blognya Rini</title>
+  </head>
+  <body id="home">
+    <!-- Navbar -->
+    <nav class="navbar navbar-expand-lg navbar-dark shadow  fixed-top "style="background-color: #003d66">
+      <div class="container">
+        <a class="navbar-brand" href="#">Rini Sinta Puspitasari</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav ms-auto">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="#home">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#about">About</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#projects">Projects</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#contact">Contact</a>
+            </li>
+          </ul>
+        </div>
+       </div>
+    </nav>
+    <!-- Akhir Navbar -->
+
+
+    <!-- Jumbotron -->
+    <section class="jumbotron text-center">
+      <img src="foto biodata.jpg" width="200" class="rounded-circle img-thumbnail"/>
+      <h1 class="display-4">Rini Sinta Puspitasari</h1>
+      <p class="lead">XI.8 - 25</p>
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#ffffff" fill-opacity="1" d="M0,64L16,64C32,64,64,64,96,58.7C128,53,160,43,192,69.3C224,96,256,160,288,154.7C320,149,352,75,384,42.7C416,11,448,21,480,64C512,107,544,181,576,186.7C608,192,640,128,672,96C704,64,736,64,768,74.7C800,85,832,107,864,133.3C896,160,928,192,960,176C992,160,1024,96,1056,69.3C1088,43,1120,53,1152,58.7C1184,64,1216,64,1248,80C1280,96,1312,128,1344,133.3C1376,139,1408,117,1424,106.7L1440,96L1440,320L1424,320C1408,320,1376,320,1344,320C1312,320,1280,320,1248,320C1216,320,1184,320,1152,320C1120,320,1088,320,1056,320C1024,320,992,320,960,320C928,320,896,320,864,320C832,320,800,320,768,320C736,320,704,320,672,320C640,320,608,320,576,320C544,320,512,320,480,320C448,320,416,320,384,320C352,320,320,320,288,320C256,320,224,320,192,320C160,320,128,320,96,320C64,320,32,320,16,320L0,320Z"></path></svg>
+    </section>
+    <!-- Akhir Jumbotron -->
+
+
+    <!-- About -->
+    <section id="about">
+      <div class="container">
+        <div class="row text-center mb-3">
+          <div class="col-md">
+            <h2>About Me</h2>
+          </div>
+        </div>
+        <div class="row mb-5">
+          <div class="col-md">
+            <table class="table table-bordered border-dark table-info "style=text-alignt="left">
+              <tr>
+                <td>Nama Lengkap</td>
+                <td>Rini Sinta Puspitasari</td>
+              </tr>
+              <tr>
+                <td>Nama Panggilan</td>
+                <td>Rini</td>
+              </tr>
+              <tr>
+                <td>Tempat, Tanggal Lahir</td>
+                <td>Depok, 05 Mei 2004</td>
+              </tr>
+              <tr>
+                <td>Hobi</td>
+                <td>Mendengarkan musik & membaca cerita fiksi</td>
+              </tr>
+            </table>
+          </div>
+        </div>
+      </div>
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#ccebff" fill-opacity="1" d="M0,224L24,229.3C48,235,96,245,144,245.3C192,245,240,235,288,197.3C336,160,384,96,432,112C480,128,528,224,576,261.3C624,299,672,277,720,234.7C768,192,816,128,864,96C912,64,960,64,1008,90.7C1056,117,1104,171,1152,176C1200,181,1248,139,1296,144C1344,149,1392,203,1416,229.3L1440,256L1440,320L1416,320C1392,320,1344,320,1296,320C1248,320,1200,320,1152,320C1104,320,1056,320,1008,320C960,320,912,320,864,320C816,320,768,320,720,320C672,320,624,320,576,320C528,320,480,320,432,320C384,320,336,320,288,320C240,320,192,320,144,320C96,320,48,320,24,320L0,320Z"></path></svg>
+    </section>
+    <!-- Akhir About -->
+
+
+    <!-- Projects -->
+    <section id="projects">
+      <div class="container">
+        <div class="row text-center mb-3">
+          <div class="col-md">
+            <h2>Pengalaman PJJ</h2>
+          </div>
+        </div>
+        <div class="row text-center mb-3">
+          <p>Seperti yang kalian tahu, selama Pandemi Covid-19 ini semua sekolah diharuskan untuk melakukan Pembelajaran Jarak Jauh (PJJ) atau mungkin lebih dikenal dengan Sekolah Online. Interaksi tatap muka yang dilakukan selama PJJ ini menggunakan aplikasi online, seperti Zoom, Google Meet, dan lain-lain. Dan penyampaian materinya ada yang menggunakan Google Classroom, ada juga yang menggunakan web yang disediakan langsung dari sekolahnya. Selama PJJ ini, murid dan guru dipaksa untuk mengerti sebuah teknologi yang mungkin sebelumnya jarang sekali digunakan. Banyak murid yang mengeluh akan sistem PJJ ini, murid merasa sekolah online ini tidak efektif, tidak ada pelajaran yang masuk ke otak, bahkan ada juga yang stress. Tetapi bukan hanya murid yang mengalami kesulitan dalam sistem PJJ ini, guru juga demikian.
+          </p>
+          <p>Sama seperti kalian, aku juga merasakan hal yang sama. Pernah berada di titik 'kok capek banget ya' 'tugasnya kenapa nambah mulu sih, belum juga kelar satu, nambah lagi yang lain'. Weekend yang seharusnya diisi dengan liburan santai, malah diisi untuk mengerjakan banyak tugas. Tenang saja kalian tidak sendirian kok. Semuanya mengalami hal yang sama. Kita sama-sama belajar dari sistem PJJ ini. Semakin kesini, coba deh untuk lebih mengerti lagi pada suatu keadaaan, untuk lebih dewasa lagi dalam menghadapi suatu masalah, karena tidak selamanya di dunia ini memutarkan hal-hal yang manis saja. Layaknya sebuah film, tidak akan seru kalau tidak ada konfliknya dan juga pasti ada sebuah hikmah yang bisa kita ambil dari suatu kejadian. Coba deh setiap ada tugas atau apapun itu, jangan langsung mengeluh, semua hanya perlu dijalani dengan rasa syukur. Bersyukur masih bisa hidup, bersyukur masih diberi kesehatan, bersyukur masih bisa sekolah, bersyukur masih bisa mendapatkan suatu pelajaran yang mungkin tidak semua orang bisa dapatkan. Yuk sama-sama berusaha untuk menjadi lebih dewasa lagi dan selalu bersyukur sekecil apapun yang kamu dapatkan itu.
+          </p>
+          <p>Mungkin segitu aja dulu cerita pengalaman dari aku. Ambil baiknya, buang buruknya. Jangan lupa untuk selalu pantengin blog aku untuk update pengalaman lainnya. Sampai jumpa lagi. Dadah..
+          </p>
+        </div>
+      </div>
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#ffffff" fill-opacity="1" d="M0,128L16,138.7C32,149,64,171,96,192C128,213,160,235,192,245.3C224,256,256,256,288,213.3C320,171,352,85,384,74.7C416,64,448,128,480,176C512,224,544,256,576,234.7C608,213,640,139,672,128C704,117,736,171,768,208C800,245,832,267,864,261.3C896,256,928,224,960,181.3C992,139,1024,85,1056,69.3C1088,53,1120,75,1152,112C1184,149,1216,203,1248,224C1280,245,1312,235,1344,229.3C1376,224,1408,224,1424,224L1440,224L1440,320L1424,320C1408,320,1376,320,1344,320C1312,320,1280,320,1248,320C1216,320,1184,320,1152,320C1120,320,1088,320,1056,320C1024,320,992,320,960,320C928,320,896,320,864,320C832,320,800,320,768,320C736,320,704,320,672,320C640,320,608,320,576,320C544,320,512,320,480,320C448,320,416,320,384,320C352,320,320,320,288,320C256,320,224,320,192,320C160,320,128,320,96,320C64,320,32,320,16,320L0,320Z"></path></svg>
+    </section>
+    <!-- Akhir Projects -->
+
+
+    <!-- Contact -->
+    <section id="contact">
+      <div class="container">
+        <div class="row text-center mb-3">
+          <div class="col-md">
+            <h2>Contact Me</h2>
+          </div>
+        </div>
+        <div class="row text-center fs-5">
+          <p>Instagram</p>
+          <p><a href="https://www.instagram.com/rinisinta.p/">@rinisinta.p</a></p>
+          <p></p>
+          <p>Telegram</p>
+          <p><a href="https://t.me/rini_554">@rini_554</a></p>
+        </div>
+      </div>
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#003d66" fill-opacity="1" d="M0,256L26.7,229.3C53.3,203,107,149,160,133.3C213.3,117,267,139,320,165.3C373.3,192,427,224,480,202.7C533.3,181,587,107,640,117.3C693.3,128,747,224,800,240C853.3,256,907,192,960,186.7C1013.3,181,1067,235,1120,261.3C1173.3,288,1227,288,1280,277.3C1333.3,267,1387,245,1413,234.7L1440,224L1440,320L1413.3,320C1386.7,320,1333,320,1280,320C1226.7,320,1173,320,1120,320C1066.7,320,1013,320,960,320C906.7,320,853,320,800,320C746.7,320,693,320,640,320C586.7,320,533,320,480,320C426.7,320,373,320,320,320C266.7,320,213,320,160,320C106.7,320,53,320,27,320L0,320Z"></path></svg>
+    </section>
+    <!-- Akhir Contact -->
+
+
+    <!-- Footer -->
+    <footer id="footer" class="text-white text-center pb-5">
+      <p>Created by <a href="https://www.instagram.com/rinisinta.p/" class="text-white fw-bold">Rini Sinta Puspitasari</a></p>
+    </footer>
+    <!-- Akhir Footer -->    
+  
+
+      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
+
+  </body>
 </html>
