--- a/index.html
+++ b/index.html
@@ -30,7 +30,10 @@
               <a class="nav-link" href="#about">About</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#projects">Projects</a>
+              <a class="nav-link" href="#pengalamanpjj">Pengalaman PJJ</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#fotogaleri">Foto Galeri</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#contact">Contact</a>
@@ -88,8 +91,8 @@
     <!-- Akhir About -->
 
 
-    <!-- Projects -->
-    <section id="projects">
+    <!-- Pengalaman PJJ -->
+    <section id="pengalamanpjj">
       <div class="container">
         <div class="row text-center mb-3">
           <div class="col-md">
@@ -107,7 +110,7 @@
       </div>
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#ffffff" fill-opacity="1" d="M0,128L16,138.7C32,149,64,171,96,192C128,213,160,235,192,245.3C224,256,256,256,288,213.3C320,171,352,85,384,74.7C416,64,448,128,480,176C512,224,544,256,576,234.7C608,213,640,139,672,128C704,117,736,171,768,208C800,245,832,267,864,261.3C896,256,928,224,960,181.3C992,139,1024,85,1056,69.3C1088,53,1120,75,1152,112C1184,149,1216,203,1248,224C1280,245,1312,235,1344,229.3C1376,224,1408,224,1424,224L1440,224L1440,320L1424,320C1408,320,1376,320,1344,320C1312,320,1280,320,1248,320C1216,320,1184,320,1152,320C1120,320,1088,320,1056,320C1024,320,992,320,960,320C928,320,896,320,864,320C832,320,800,320,768,320C736,320,704,320,672,320C640,320,608,320,576,320C544,320,512,320,480,320C448,320,416,320,384,320C352,320,320,320,288,320C256,320,224,320,192,320C160,320,128,320,96,320C64,320,32,320,16,320L0,320Z"></path></svg>
     </section>
-    <!-- Akhir Projects -->
+    <!-- Akhir Pengalaman PJJ -->
 
 
     <!-- Contact -->
@@ -131,11 +134,11 @@
     <!-- Akhir Contact -->
 
 
-    <!-- Footer -->
-    <footer id="footer" class="text-white text-center pb-5">
+    <footer id="footer" class="text-white text-center pb-5" style="background-color:#003d66">
       <p>Created by <a href="https://www.instagram.com/rinisinta.p/" class="text-white fw-bold">Rini Sinta Puspitasari</a></p>
     </footer>
     <!-- Akhir Footer -->    
+     
   
 
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
