--- a/foto galeri.html
+++ b/foto galeri.html
@@ -10,6 +10,7 @@
 
     <!-- My CSS -->
     <link rel="stylesheet" href="labkom.css">
+    <link rel="stylesheet" href="index.html">
 
     <title>Blognya Rini</title>
   </head>
