--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <!-- My CSS -->
     <link rel="stylesheet" href="labkom.css">
-    <link rel="stylesheet" href="fotogaleri.html">
+    <link href="fotogaleri.html">
 
     <title>Blognya Rini</title>
   </head>
