--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 
     <!-- My CSS -->
     <link rel="stylesheet" href="labkom.css">
-    <link href="fotogaleri.html">
-
+    <a href="about.html"></a>
+    
     <title>Blognya Rini</title>
   </head>
   <body id="home">
