--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <!-- My CSS -->
     <link rel="stylesheet" href="labkom.css">
-    <a href="fotogaleri.html"></a>
+    <link rel="stylesheet" href="fotogaleri">
     
     <title>Blognya Rini</title>
   </head>
