--- a/fotogaleri.html
+++ b/fotogaleri.html
@@ -10,6 +10,7 @@
 
     <!-- My CSS -->
     <link rel="stylesheet" href="labkom.css">
+    <link rel="stylesheet" href="index">
 
     <title>Blognya Rini</title>
   </head>
