--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
               <a class="nav-link" href="#pengalamanpjj">Pengalaman PJJ</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#fotogaleri">Foto Galeri</a>
+              <a class="nav-link" href="fotogaleri.html">Foto Galeri</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#contact">Contact</a>
