--- a/fotogaleri.html
+++ b/fotogaleri.html
@@ -10,7 +10,6 @@
 
     <!-- My CSS -->
     <link rel="stylesheet" href="labkom.css">
-    <link rel="stylesheet" href="index">
 
     <title>Blognya Rini</title>
   </head>
@@ -47,7 +46,7 @@
 
 
     <!-- Foto Galeri -->
-    <section id="fotogaleri" style="background-color: #ccebff">
+    <section id="fotogaleri">
       <div class="container">
         <div class="row text-center mb-3">
           <div class="col">
