--- a/fotogaleri.html
+++ b/fotogaleri.html
@@ -106,21 +106,21 @@
             <div class="card">
               <img src="7.jpg" class="card-img-top">
               <div class="card-body">
-                <p class="card-text text-center">Latihan Teater di Kebun Raya Bogor</p>
+                <p class="card-text text-center">Screen Stage Arena</p>
               </div>
             </div>
           </div><div class="col-md-4 mb-3">
             <div class="card">
               <img src="8.jpg" class="card-img-top">
               <div class="card-body">
-                <p class="card-text text-center">Diksar Teater Tjorong</p>
+                <p class="card-text text-center">Screen Stage Arena</p>
               </div>
             </div>
           </div><div class="col-md-4 mb-3">
             <div class="card">
               <img src="9.jpg" class="card-img-top">
               <div class="card-body">
-                <p class="card-text text-center">Diksar Teater Tjorong</p>
+                <p class="card-text text-center">Screen Stage Arena</p>
               </div>
             </div>
           </div>
