--- a/fotogaleri.html
+++ b/fotogaleri.html
@@ -27,16 +27,16 @@
               <a class="nav-link active" aria-current="page" href="#home">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="index.html">About</a>
+              <a class="nav-link" href="index.html#about">About</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="index.html">Pengalaman PJJ</a>
+              <a class="nav-link" href="index.html#pengalamanpjj">Pengalaman PJJ</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#fotogaleri">Foto Galeri</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="index.html">Contact</a>
+              <a class="nav-link" href="index.html#contact">Contact</a>
             </li>
           </ul>
         </div>
